--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 swifter[groupby]==1.3.2
-fastparquet
+fastparquet==2023.1.0
+tensorflow==2.11.0
+scikit-learn==1.2.1
+plotly==5.13.0
+fastjsonschema==2.16.2 
+nbformat==5.7.3
+ipykernel
