Add formatting for the input features of the XGboost model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
     ],
     "cSpell.words": [
         "fastparquet",
+        "finfo",
+        "icecube",
+        "kaggle",
         "pytest",
         "showlegend"
     ]
