--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ scikit-learn==1.2.1
 plotly==5.13.0
 fastjsonschema==2.16.2 
 nbformat==5.7.3
+matplotlib==3.7.0
+dask[complete]
 ipykernel
 pylint
 pytest
