Add the annotations for the properties

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,11 +16,15 @@
         "icecube",
         "kaggle",
         "pytest",
+        "showarrow",
         "showlegend",
         "showscale",
         "tickvals",
+        "xanchor",
         "xaxes",
+        "yanchor",
         "yaxes",
+        "yref",
         "zaxes"
     ],
     "python.analysis.diagnosticSeverityOverrides": {
