Add the data generator to the LSTM notebool

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "colorbar",
         "fastparquet",
         "finfo",
+        "gmbkb",
         "hovertemplate",
         "icecube",
         "kaggle",
