--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "cSpell.words": [
         "adam",
         "colorbar",
+        "DNNLSTM",
         "fastparquet",
         "finfo",
         "gmbkb",
