Add Validation loss

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "hovertemplate",
         "icecube",
         "kaggle",
+        "lstm",
         "pytest",
         "showarrow",
         "showlegend",
