--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 swifter[groupby]==1.3.2
 fastparquet==2023.1.0
 mlflow==2.1.1
-tensorflow-gpu==2.11.0
 scikit-learn==1.2.1
 plotly==5.13.0
 fastjsonschema==2.16.2 
@@ -9,7 +8,13 @@ nbformat==5.7.3
 matplotlib==3.7.0
 xgboost==1.7.3
 ipycytoscape==1.3.3
+numpy==1.20.3 
 dask[complete]
 ipykernel
 pylint
 pytest
+
+
+# tensorflow==2.4.0
+# nvidia-tensorrt==7.2.2.3
+# nvidia-pyindex
