--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-swifter[groupby]==1.3.2
-fastparquet==2023.1.0
-mlflow==2.1.1
-scikit-learn==1.2.1
-plotly==5.13.0
-fastjsonschema==2.16.2 
-nbformat==5.7.3
-matplotlib==3.7.0
-xgboost==1.7.3
-ipycytoscape==1.3.3
-numpy==1.20.3 
-dask[complete]
-ipykernel
+tensorflow==2.6.0
+numpy
+pandas
+scikit-learn
+mlflow
+plotly
+fastjsonschema
+nbformat
+matplotlib
+xgboost
+ipycytoscape
 pylint
 pytest
 
 
-# tensorflow==2.4.0
 # nvidia-tensorrt==7.2.2.3
 # nvidia-pyindex
